<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">


    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="358dp"
        android:layout_height="268dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/altitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/altitude"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/colorLabels"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewAltitude"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/altitude"
            android:textAlignment="viewEnd"
            android:textSize="18sp"
            app:layout_column="1"
            app:layout_row="0" />

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/latitude"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/colorLabels"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/textViewLatitude"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:textAlignment="viewEnd"
            android:textSize="18sp"
            app:layout_column="1"
            app:layout_row="1" />

        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/longitude"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/colorLabels"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:id="@+id/textViewLongitude"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:textAlignment="viewEnd"
            android:textSize="18sp"
            app:layout_column="1"
            app:layout_row="2" />

        <TextView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/speed"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/colorLabels"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="3" />

        <TextView
            android:id="@+id/textViewSpeed"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            android:textAlignment="viewEnd"
            android:textSize="18sp"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/update"
            app:layout_column="2"
            app:layout_row="4" />

        <Button
            android:id="@+id/buttonNetwork"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/network"
            app:layout_column="2"
            app:layout_row="5" />

        <Button
            android:id="@+id/buttonSatellite"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/satellite"
            app:layout_column="2"
            app:layout_row="6" />

    </android.support.v7.widget.GridLayout>

</android.support.constraint.ConstraintLayout>